{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 19,
  "lineage": "3c900194-22b1-7a1b-6b92-7851bb4d13a6",
  "resources": [
    {
      "module": "module.digital_portfolio_dev_stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dp_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df7a207adb9748c7",
            "arn": "arn:aws:ec2:ap-southeast-1:645255961018:instance/i-0e14046159a88589e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e14046159a88589e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "utshab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0392b135ab711b59b",
            "private_dns": "ip-172-31-16-109.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.16.109",
            "public_dns": "ec2-3-1-204-210.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.204.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05174721ddfe1e046",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "digital_portfolio_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ed192e9205c5240",
            "tags": {
              "Name": "dp-dev-server"
            },
            "tags_all": {
              "Name": "dp-dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-003a972bfe390c0c8"
            ]
          },
          "dependencies": [
            "module.digital_portfolio_dev_stack.module.security_group.aws_security_group.dp_sg"
          ]
        }
      ]
    },
    {
      "module": "module.digital_portfolio_dev_stack.module.security_group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:645255961018:vpc/vpc-02bfe43fa0de25d03",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01673a5c086e7078c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0f2e977fae38c5b65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bfe43fa0de25d03",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03fad3249674e0c57",
            "owner_id": "645255961018"
          }
        }
      ]
    },
    {
      "module": "module.digital_portfolio_dev_stack.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:645255961018:security-group/sg-003a972bfe390c0c8",
            "description": "Test Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003a972bfe390c0c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "digital_portfolio_sg",
            "name_prefix": "",
            "owner_id": "645255961018",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "digital-portfolio-sg"
            },
            "tags_all": {
              "Name": "digital-portfolio-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bfe43fa0de25d03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.digital_portfolio_dev_stack.module.security_group.data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.digital_portfolio_dev_stack.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1704797784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-003a972bfe390c0c8",
            "security_group_rule_id": "sgr-0d70b0f3608fafc05",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.digital_portfolio_dev_stack.module.security_group.aws_security_group.dp_sg",
            "module.digital_portfolio_dev_stack.module.security_group.data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.digital_portfolio_dev_stack.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8000,
            "id": "sgrule-767474259",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003a972bfe390c0c8",
            "security_group_rule_id": "sgr-0a2f8a93ac6b2646a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.digital_portfolio_dev_stack.module.security_group.aws_security_group.dp_sg",
            "module.digital_portfolio_dev_stack.module.security_group.data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.digital_portfolio_dev_stack.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-969095141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003a972bfe390c0c8",
            "security_group_rule_id": "sgr-0301b4c2cb3b07472",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.digital_portfolio_dev_stack.module.security_group.aws_security_group.dp_sg",
            "module.digital_portfolio_dev_stack.module.security_group.data.aws_vpc.existing_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.digital_portfolio_dev_stack.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2546794747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003a972bfe390c0c8",
            "security_group_rule_id": "sgr-00fc79863f1d455b0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.digital_portfolio_dev_stack.module.security_group.aws_security_group.dp_sg",
            "module.digital_portfolio_dev_stack.module.security_group.data.aws_vpc.existing_vpc"
          ]
        }
      ]
    }
  ]
}